# IranRadio

./: CMakeLists.txt  IranRadio_fa_IR.ts  README.md  resource.qrc
resources/: IranRadio_fa_IR.ts
resources/other/: stations.json
src/: CustomListWidgetItem.cpp  CustomListWidgetItem.h  NetworkManager.cpp  NetworkManager.h  PlayList.cpp  PlayList.h  PlayerWindow.cpp  PlayerWindow.h  RadioPlayer.cpp  RadioPlayer.h  SettingsDialog.cpp  SettingsDialog.h  SystemTry.cpp  SystemTry.h  main.cpp  player_window.ui  settings_dialog.ui
